<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white"
        app:title="@string/editor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin"
        android:showDividers="middle"
        android:divider="@drawable/divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mask_color"/>

            <com.github.naz013.colorslider.ColorSlider
                android:id="@+id/maskColorView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/element_height"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/maskCornerRadiusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mask_corner_radius"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/maskCornerRadiusView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin"
        android:showDividers="middle"
        android:divider="@drawable/divider">

        <CheckBox
            android:id="@+id/shimmerShowView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shimmer_show"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shimmer_color"/>

            <com.github.naz013.colorslider.ColorSlider
                android:id="@+id/shimmerColorView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/element_height"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/shimmerDurationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shimmer_duration"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/shimmerDurationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>