<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="@string/editor"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:padding="@dimen/padding_large"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/maskCornerRadiusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mask_corner_radius" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/maskCornerRadiusView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mask_color" />

            <com.github.naz013.colorslider.ColorSlider
                android:id="@+id/maskColorView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/element_height"
                android:layout_marginTop="@dimen/padding" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:padding="@dimen/padding_large"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/shimmerShowView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/shimmer_show" />

            <Spinner
                android:id="@+id/shimmerDirectionView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/shimmer_directions" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/shimmerDurationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shimmer_duration" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/shimmerDurationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/shimmerAngleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shimmer_angle" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/shimmerAngleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shimmer_color" />

            <com.github.naz013.colorslider.ColorSlider
                android:id="@+id/shimmerColorView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/element_height"
                android:layout_marginTop="@dimen/padding" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>